2002-08-15  John Sullivan  <sullivan@apple.com>

	- fixed 3025770 -- "New Bookmark" button hits assertion and crashes

        * Bookmarks.subproj/WebBookmarkLeaf.m:
        (-[WebBookmarkLeaf setURLString:]): Instead of asserting that parameter
	is not nil, handle the nil case by converting to empty string. This was
	another regression from yesterday's favIcon changes.

=== Alexander-19 ===

2002-08-15  John Sullivan  <sullivan@apple.com>

	Disabled support for storing favIcon URLs in bookmarks; Gramps realized
	this is an architecture problem that needs a better solution, and he
	didn't want to ship Alex-18 with this problem.

        * Bookmarks.subproj/WebBookmarkLeaf.m:
        (-[WebBookmarkLeaf dictionaryRepresentation]):
        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem dictionaryRepresentation]):
	Commented out the code that added the iconURLString in the dictionary used
	for writing out file. This dictionary is also used on the pasteboard, so this
	change causes the favIcon not to be remembered when you drag from proxy icon
	to favorites bar.

=== Alexander-18 ===

2002-08-14  Chris Blumenberg  <cblu@apple.com>

	Support for showing favicons in bookmarks and history.

	Renamed "image" to "icon" in all places.

	Made history and bookmarks take and save an icon URL

        * Bookmarks.subproj/WebBookmark.h:
        * Bookmarks.subproj/WebBookmark.m:
        (-[WebBookmark icon]):
        (-[WebBookmark iconURL]):
        (-[WebBookmark setIconURL:]):
        * Bookmarks.subproj/WebBookmarkGroup.h:
        * Bookmarks.subproj/WebBookmarkGroup.m:
        (-[WebBookmarkGroup _setTopBookmark:]):
        (-[WebBookmarkGroup addNewBookmarkToBookmark:withTitle:iconURL:URLString:type:]):
        (-[WebBookmarkGroup insertNewBookmarkAtIndex:ofBookmark:withTitle:iconURL:URLString:type:]):
        * Bookmarks.subproj/WebBookmarkLeaf.h:
        * Bookmarks.subproj/WebBookmarkLeaf.m: