@@ -1,3 +1,9 @@
+2002-08-16  Darin Adler  <darin@apple.com>
+
+	Fixed broken build.
+
+        * Misc.subproj/WebTestController.m: Added empty placeholder methods.
+
 2002-08-15  John Sullivan  <sullivan@apple.com>
 
 	- fixed 3025770 -- "New Bookmark" button hits assertion and crashes
